--- a/index.html
+++ b/index.html
@@ -25,9 +25,8 @@
     <div class="container-fluid">
         <div class="row-fluid">
             <div class="span12 text-center">
-                <h1 class="text-center">Nantes, 10 &deg;C</h1>
                 <h1 id="date"></h1>
-                <h1 id="clock" class="text-center"></h1>
+                <h1 id="clock"></h1>
             </div>
         </div>
         <div class="row-fluid">
