--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
                 <h3 id="bicloo-2"></h3>
             </div>
         </div>
+        <div class="row-fluid">
+            <div class="span12 text-center">
+                <h3 id="infotrafic"></h3>
+            </div>
+        </div>
     </div>
     <script src="static/js/jquery.js"></script>
     <script src="static/js/bootstrap.min.js"></script>
