Added messages with source

--- a/index.html
+++ b/index.html
@@ -32,17 +32,18 @@
         <div class="row-fluid">
             <div id="tan" class="span6 text-center">
                 <h3>TAN</h3>
-                <h1>...</h1>
+                <h1></h1>
             </div>
             <div id="bicloo" class="span6 text-center">
                 <h3>BICLOO</h3>
-                <h1 id="bicloo-1">...</h1>
+                <h1 id="bicloo-1"></h1>
                 <h3 id="bicloo-2"></h3>
             </div>
         </div>
         <div class="row-fluid">
-            <div class="span12 text-center">
-                <h3 id="infotrafic"></h3>
+            <div class="span8 offset2 text-right">
+                <h3 id="message"></h3>
+                <h4 id="source"></h4>
             </div>
         </div>
     </div>
