--- a/index.html
+++ b/index.html
@@ -31,13 +31,14 @@
         </div>
         <div class="row-fluid">
             <div id="tan" class="span6 text-center">
-                <h3>TAN</h3>
+                <h3></h3>
                 <h1></h1>
             </div>
             <div id="bicloo" class="span6 text-center">
-                <h3>BICLOO</h3>
+                <h4>Stations BICLOO</h4>
                 <h1 id="bicloo-1"></h1>
                 <h3 id="bicloo-2"></h3>
+                <h3 id="bicloo-3"></h3>
             </div>
         </div>
         <div class="row-fluid">
